--- a/findly-builder/src/app/components/faq-source/faq-source.component.scss
+++ b/findly-builder/src/app/components/faq-source/faq-source.component.scss
@@ -170,6 +170,7 @@
                         background: #F8F9FA;
                         padding: 8px 20px;                    
                         .kr-sg-input-search{
+                            width:56%;
                             .input-search{
                                 border: 1px solid #E4E5E7;                            
                                 border-radius: 4px;
