--- a/findly-builder/src/app/components/index/index.component.scss
+++ b/findly-builder/src/app/components/index/index.component.scss
@@ -626,7 +626,7 @@
             font-size: 14px;
             line-height: 14px;
             .checkbox-custom-label{
-              color: #202124;     
+             // color: #202124;     
               font-weight: normal;
               font-size: 14px;
               line-height: 14px;
