structured data UI updated

--- a/findly-builder/src/app/components/add-structured-data/add-structured-data.component.scss
+++ b/findly-builder/src/app/components/add-structured-data/add-structured-data.component.scss
@@ -249,6 +249,13 @@
     }
     .navigation-btn{
         cursor: pointer;
+        margin-left: 5px;
+        padding: 5px;
+        transition: 0.2s all ease-in;
+        &:hover{
+            background: #EFF0F1;
+            border-radius: 2px;
+        }
         &.disabled{
             pointer-events: none;
             opacity: 0.5;
