--- a/findly-builder/src/app/components/business-rules/business-rules.component.html
+++ b/findly-builder/src/app/components/business-rules/business-rules.component.html
@@ -17,11 +17,19 @@
             </div>
         </div>
         <div class="col-8 right-sec p-0" *ngIf=" !(selcectionObj && selcectionObj.selectedItems && selcectionObj.selectedCount)">
-            <div class="kr-sg-input-search m-0" [ngClass]="{ active: showSearch }">
-                <input type="text" placeholder="Search" id="searchInput" autocomplete="off" class="input-search" placeholder="Search" [(ngModel)]="searchRules" />
+            <div class="kr-sg-input-search" [ngClass]="{ active: showSearch }">
+                <input type="text" placeholder="Search" class="input-search" [ngClass]="{'pl-33':!searchRules}" autocomplete="off" [(ngModel)]="searchRules" (focusout)="showSearch= !showSearch" (mouseover)="searchImgSrc = (searchFocusIn ? 'assets/icons/search_gray.svg' :'assets/icons/search_gray_dark.svg')"
+                    (mouseout)="searchFocusIn=false;searchImgSrc = 'assets/icons/search_gray.svg'" (focus)="searchFocusIn=true;searchImgSrc = 'assets/icons/search_gray.svg'">
+                <img [src]="searchImgSrc" class="search-icon" *ngIf="!searchRules">
+                <img class="close-icon" *ngIf="searchRules" src="assets/icons/close_icon.svg" [ngClass]="{'pr-22':searchRules}" (click)="searchfacet='';toggleSearch(false)">
             </div>
-            <div *ngIf="!loadingContent && rules && rules.length" class="seach-block" (click)="toggleSearch()">
-                <img *ngIf="!showSearch" src="assets/icons/search.svg" /><img *ngIf="showSearch" src="assets/images/close.svg" />{{ "search" | translate }}
+            <!-- <div class="kr-sg-input-search m-0" [ngClass]="{ active: showSearch }">
+                <input type="text" placeholder="Search" id="searchInput" autocomplete="off" class="input-search" placeholder="Search" [(ngModel)]="searchRules" />
+            </div> -->
+            <div *ngIf="!loadingContent && rules && rules.length && !showSearch" class="seach-block" (click)="toggleSearch()">
+                <img src="assets/icons/search.svg" />
+                <!-- <img *ngIf="showSearch" src="assets/images/close.svg" /> -->
+                {{ "search" | translate }}
             </div>
             <div class="add_feild" (click)="createNewRule()" *ngIf=" rules && rules.length">
                 <img src="assets/icons/add_plus.svg" />{{ "businessRules.add_rule" | translate }}
