--- a/findly-builder/src/app/components/facets/facets.component.html
+++ b/findly-builder/src/app/components/facets/facets.component.html
@@ -7,20 +7,20 @@
         <div class="header-sec">
             <div class="title">{{'facets.facets'| translate}}</div>
             <div class="d-flex align-items-center" *ngIf="!noItems || emptySearchResults">
-                <div class="kr-sg-input-search">
-                    <input type="text" placeholder="Search" class="input-search" (keyup.enter)="searchItems()" [ngClass]="{'pl-33':!searchfacet}" autocomplete="off" [(ngModel)]="searchfacet" (mouseover)="searchImgSrc = (searchFocusIn ? 'assets/icons/search_gray.svg' :'assets/icons/search_gray_dark.svg')"
+                <div class="kr-sg-input-search" [ngClass]="{'d-none': !showSearch}">
+                    <input type="text" placeholder="Search" class="input-search" (keyup.enter)="searchItems()" [ngClass]="{'pl-33':!searchfacet}" autocomplete="off" [(ngModel)]="searchfacet" (focusout)="showSearch= !showSearch" (mouseover)="searchImgSrc = (searchFocusIn ? 'assets/icons/search_gray.svg' :'assets/icons/search_gray_dark.svg')"
                         (mouseout)="searchFocusIn=false;searchImgSrc = 'assets/icons/search_gray.svg'" (focus)="searchFocusIn=true;searchImgSrc = 'assets/icons/search_gray.svg'">
                     <img [src]="searchImgSrc" class="search-icon" *ngIf="!searchfacet">
-                    <img class="close-icon" *ngIf="searchfacet" src="assets/icons/close_icon.svg" [ngClass]="{'pr-22':searchfacet}" (click)="searchfacet=''">
+                    <img class="close-icon" *ngIf="searchfacet" src="assets/icons/close_icon.svg" [ngClass]="{'pr-22':searchfacet}" (click)="searchfacet='';toggleSearch(false)">
                 </div>
                 <!-- <div class="kr-sg-input-search m-0" [ngClass]="{'d-none': !showSearch}">
                     <img src="assets/icons/search_gray.svg" class="search-icon">
                     <input type="text" id="direct-search" [(ngModel)]="searchfacet" (keyup.enter)="searchItems()" placeholder="Search" autocomplete="off" class="input-search pl-2" placeholder="Search">
-                </div>
+                </div>-->
                 <div class="seach-block" *ngIf="(facets && facets.length)">
                     <span [ngClass]="{'d-none': showSearch}" id="btn_toggle_search_structured_data" (click)="toggleSearch(true)"><img src="assets/icons/search.svg" [ngClass]="{'d-none': showSearch}">{{'search' | translate}}</span>
-                    <img [ngClass]="{'d-none': !showSearch}" id="btn_close_search_structured_data" src="assets/images/close.svg" (click)="toggleSearch(false)">
-                </div> -->
+                    <!-- <img [ngClass]="{'d-none': !showSearch}" id="btn_close_search_structured_data" src="assets/images/close.svg" (click)="toggleSearch(false)"> -->
+                </div>
                 <button id='btn_addFacet' *ngIf="(facets && facets.length)" class="kr-sg-button-primary btn_lg mr-3" (click)="createNewFacet()"><img src="assets/icons/add_plus.svg">{{'facets.add_facet'| translate}}</button>
                 <img class="mr-3" src="assets/icons/clock.svg">
             </div>
@@ -220,11 +220,11 @@
                                 </perfect-scrollbar>
                             </ul>
                         </div>
-                        <div class="kr-sg-inline-notification" *ngIf="selectedFieldId === selectedField.fieldId && addEditFacetObj.showFieldWarning && addEditFacetObj.showFieldWarning === 'NOT_INDEXED'">
+                        <div class="kr-sg-inline-notification" *ngIf="selectedFieldId === selectedField?.fieldId && addEditFacetObj?.showFieldWarning && addEditFacetObj?.showFieldWarning === 'NOT_INDEXED'">
                             <div class="bulb-icon"><img src="assets/icons/info-blue.svg"></div>
                             <div class="tost-text">{{selectedField.fieldName}} is not indexed</div>
                         </div>
-                        <div class="kr-sg-inline-notification" *ngIf="selectedFieldId === selectedField.fieldId && addEditFacetObj.showFieldWarning && addEditFacetObj.showFieldWarning === 'CHANGE_IN_TYPE'">
+                        <div class="kr-sg-inline-notification" *ngIf="selectedFieldId === selectedField?.fieldId && addEditFacetObj?.showFieldWarning && addEditFacetObj?.showFieldWarning === 'CHANGE_IN_TYPE'">
                             <div class="bulb-icon"><img src="assets/icons/info-blue.svg"></div>
                             <div class="tost-text">The Field type has been changed</div>
                         </div>
